--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,3 +7,6 @@ setw -g pane-base-index 1
 
 # Enable mouse
 set -g mouse on
+
+set-option -ga terminal-overrides ",alacritty:Tc"
+set -g default-terminal "alacritty"
